# django-images

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-utility  ENV-dev  Pipfile  README.md  VERSION  build.ps1  envpostgres  pg.yaml  pyproject.toml  requirements.txt  requirements.txt.notNeeded
.github/workflows/: buildimage.yml
_helm/: Chart.yaml  values.yaml
_helm/templates/: deployment.yaml  job.yaml  postgresql.yaml  pvc.yaml
core/: settings.py  urls.py
images/: admin.py  middleware.py  models.py  tables.py  urls.py  views.py
images/management/commands/: restoreimages.py
images/migrations/: 0001_initial.py
