[project]
name = "django-images"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.8.1 ; python_full_version >= '3.8'",
    "crispy-bootstrap4==2024.1 ; python_full_version >= '3.8'",
    "dj-database-url>=3.0.1",
    "django==5.1.1 ; python_full_version >= '3.10'",
    "django-crispy-forms==2.3 ; python_full_version >= '3.8'",
    "django-tables2==2.7.0",
    "pillow==10.4.0 ; python_full_version >= '3.8'",
    "sqlparse==0.5.1 ; python_full_version >= '3.8'",
    "typing-extensions==4.12.2 ; python_full_version < '3.11'",
    "uvicorn>=0.38.0",
    "whitenoise==6.7.0 ; python_full_version >= '3.8'",
]
