[project]
name = "django-images"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.8.1",
    "crispy-bootstrap4>=2025.6",
    "dj-database-url>=3.0.1",
    "django>=5.1.1",
    "django-crispy-forms>=2.5",
    "django-tables2>=2.8.0",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.3.0",
    "sqlparse>=0.5.1",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.38.0",
    "whitenoise>=6.11.0",
]
